<resources>

    <string name="app_name">Audio Messenger</string>
    <string name="service_label">NotificationListenerExampleService</string>
    <string name="image_change_explanaton">Hier wird die empfangene Nachricht angezeigt.</string>

    <!-- Placeholder string for if the image doesn't load -->
    <string name="notification_logo">Intercepted Notification Logo</string>

    <!-- Strings related to the Alert Dialog -->
    <string name="notification_listener_service">"Notification Listener Service"</string>
    <string name="notification_listener_service_explanation">"For the the app. to work you need to enable the Notification Listener Service. Enable it now?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="authorizationTitle">Authorisierung</string>
    <string name="enterPhoneNumber">Zur Nutzung dieser App, musst du deine Telefonnummer vervollständigen. Ein Telegram Account wird vorausgesetzt.</string>
    <string name="enterLoginCode">Du hast in der Telegram App einen Login Code erhalten. Gib den Login Code ein.</string>
    <string name="request">Code anfordern</string>
    <string name="cancel">Abbrechen</string>
    <string name="confirm">Bestätigen</string>
    <string name="countryCode">+49</string>
    <string name="noLoginCode">Login Code erneut anfordern</string>

</resources>
